Update CORS configuration and finalize SQLGenAI features